# internal/server/grpc.go
@@ -4,6 +4,7 @@ import (
 	authv1 "github.com/go-kratos/kratos-layout/api/auth/v1"
 	countryv1 "github.com/go-kratos/kratos-layout/api/country/v1"
 	helloworldv1 "github.com/go-kratos/kratos-layout/api/helloworld/v1"
+	provincev1 "github.com/go-kratos/kratos-layout/api/province/v1"
 	userv1 "github.com/go-kratos/kratos-layout/api/user/v1"
 	"github.com/go-kratos/kratos-layout/internal/conf"
 	"github.com/go-kratos/kratos-layout/internal/service"
@@ -14,7 +15,7 @@ import (
 )
 
 // NewGRPCServer new a gRPC server.
-func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, user *service.UserService, auth *service.AuthService, country *service.CountryService, logger log.Logger) *grpc.Server {
+func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, user *service.UserService, auth *service.AuthService, country *service.CountryService, province *service.ProvinceService, logger log.Logger) *grpc.Server {
 	var opts = []grpc.ServerOption{
 		grpc.Middleware(
 			recovery.Recovery(),
@@ -34,5 +35,6 @@ func NewGRPCServer(c *conf.Server, greeter *service.GreeterService, user *servic
 	userv1.RegisterUserServiceServer(srv, user)
 	authv1.RegisterAuthServiceServer(srv, auth)
 	countryv1.RegisterCountryServiceServer(srv, country)
+	provincev1.RegisterProvinceServiceServer(srv, province)
 	return srv
 }
